versions/v2.8/modules/en/pages/rancher-admin/users/settings/settings.adoc
= User Settings
:page-languages: [en, zh]
:revdate: 2024-11-19
:page-revdate: {revdate}

Within Rancher, each user has a number of settings associated with their login: personal preferences, API keys, etc. You can configure these settings by choosing from the *User Settings* menu. You can open this menu by clicking your avatar, located within the main menu.

image::user-settings.png[User Settings Menu]

The available user settings are:

* xref:rancher-admin/users/settings/api-keys.adoc[API & Keys]: If you want to interact with Rancher programmatically, you need an API key. Follow the directions in this section to obtain a key.
* xref:rancher-admin/users/settings/manage-cloud-credentials.adoc[Cloud Credentials]: Manage cloud credentials xref:cluster-deployment/infra-providers/infra-providers.adoc#_node_templates[used by node templates] to xref:cluster-deployment/launch-kubernetes-with-rancher.adoc[provision nodes for clusters].
* xref:rancher-admin/users/settings/manage-node-templates.adoc[Node Templates]: Manage templates xref:cluster-deployment/launch-kubernetes-with-rancher.adoc[used by Rancher to provision nodes for clusters].
* xref:rancher-admin/users/settings/user-preferences.adoc[Preferences]: Sets superficial preferences for the Rancher UI.
* Log Out: Ends your user session.
