versions/v2.9/modules/en/pages/rancher-admin/users/settings/settings.adoc
= User Settings
:page-languages: [en, zh]
:revdate: 2024-11-19
:page-revdate: {revdate}
:community-path: reference-guides/user-settings/index.adoc 
:product-path: rancher-admin/users/settings/settings.adoc
ifeval::["{build-type}" != "community"]
:xref-user-api-keys: rancher-admin/users/settings/api-keys.adoc
:xref-launch-k8s-with-rancher: xref:cluster-deployment/launch-kubernetes-with-rancher.adoc
:xref-infra-providers: xref:cluster-deployment/infra-providers/infra-providers.adoc
:xref-cloud-credentials: xref:rancher-admin/users/settings/manage-cloud-credentials.adoc
:xref-manage-node-templates: xref:rancher-admin/users/settings/manage-node-templates.adoc
endif::[]
ifeval::["{build-type}" == "community"]
:xref-user-api-keys: xref:reference-guides/user-settings/api-keys.adoc
:xref-launch-k8s-with-rancher: xref:how-to-guides/new-user-guides/launch-kubernetes-with-rancher/index.adoc
:xref-infra-providers: xref:how-to-guides/new-user-guides/launch-kubernetes-with-rancher/use-new-nodes-in-an-infra-provider/index.adoc
:xref-cloud-credentials: xref:reference-guides/user-settings/manage-cloud-credentials.adoc
:xref-manage-node-templates: xref:reference-guides/user-settings/manage-node-templates.adoc
endif::[]

Within Rancher, each user has a number of settings associated with their login: personal preferences, API keys, etc. You can configure these settings by choosing from the *User Settings* menu. You can open this menu by clicking your avatar, located within the main menu.

image::user-settings.png[User Settings Menu]

The available user settings are:

* {xref-user-api-keys}[API & Keys]: If you want to interact with Rancher programmatically, you need an API key. Follow the directions in this section to obtain a key.
* {xref-cloud-credentials}[Cloud Credentials]: Manage cloud credentials {xref-infra-providers}#_node_templates[used by node templates] to {xref-launch-k8s-with-rancher}[provision nodes for clusters].
* {xref-manage-node-templates}[Node Templates]: Manage templates {xref-launch-k8s-with-rancher}[used by Rancher to provision nodes for clusters].
* xref:rancher-admin/users/settings/user-preferences.adoc[Preferences]: Sets superficial preferences for the Rancher UI.
* Log Out: Ends your user session.
